# beautiful_folds

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  composition.cpp
include/: CMakeLists.txt
include/folds/drivers/: reduce.hpp
include/folds/folds/: average.hpp  fold.hpp  length.hpp  max.hpp  sum.hpp
include/folds/monoids/: average.hpp  max.hpp  sum.hpp  void.hpp
include/folds/utility/: tuple.hpp  type_traits.hpp
tests/: CMakeLists.txt  construction.cpp  noexcept_propagation.cpp  operators.cpp  sizes.cpp
tools/: do.py
tools/docker/linux/: Dockerfile
tools/scripts/ctest/: compute-coverage.sh.in  coverage-g++.ctest
tools/scripts/linux/: build-clang.sh  build-gcc.sh  coverage.sh  test-clang.sh  test-gcc.sh
